--- a/music_player_v3/package.json
+++ b/music_player_v3/package.json
@@ -21,5 +21,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
+  },
+  "egines": {
+    "node": "18.x"
   }
 }
